<resources>
    <bool name="is_rtl">false</bool>
    <string name="app_name" translatable="false">HUJI</string>

    <!-- MainActivity -->
    <string name="login_hint">Login</string>
    <string name="personal_code">Personal Code</string>
    <string name="login">login</string>
    <string name="captcha">CAPTCHA</string>

    <string name="huji_logo_desc">HUJI logo</string>

    <string name="error">Error</string>
    <string name="missing_id_error">Enter an ID number</string>
    <string name="incorrect_id_length">ID number is of incorrect length</string>
    <string name="missing_personal_code_error">Enter your personal code</string>
    <string name="missing_captcha_error">Enter the CAPTCHA</string>

    <string name="wrong_captcha_error">Incorrect CAPTCHA</string>
    <string name="wrong_username_or_password_error">Incorrect username or password</string>

    <!-- Session -->
    <string name="captcha_network_error">Unable to load CAPTCHA, check your internet connection or HUJI site.</string>
    <string name="login_network_error">Unable to connect to HUJI, check your internet connection or HUJI site.</string>
    <string name="extend_session">Extend session</string>
    <string name="website_down_for_maintenance">The personal information website is down for maintenance</string>

    <!-- SessionActivity -->
    <string name="courses">Courses</string>
    <string name="timetable">Timetable</string>
    <string name="about_me">Me</string>
    <string name="map">Map</string>
    <string name="more">More</string>

    <!-- MoreFragment -->
    <string name="send_mail">Send mail..</string>
    <string name="no_email_accounts_error">There are no email clients installed.</string>

    <string name="about_app">About Application</string>
    <string name="developers">Developers</string>
    <string name="contact">Contact us</string>
    <string name="huji_name_and_logo">HUJI name and logo</string>
    <string name="licenses">Licenses</string>

    <string name="useful_info">Useful Info</string>
    <string name="academic_calendar">Academic Calendar</string>
    <string name="contacts">Contacts</string>
    <string name="campus_shuttle_times">Campus Shuttle Times</string>

    <string name="akram">Akram Abul Haj</string>
    <string name="licenses_summary">View licenses of open source libraries used in Client for HUJI</string>
    <string name="academic_calendar_summary">View holiday and event dates</string>
    <string name="contacts_summary">View important phone numbers</string>
    <string name="campus_shuttle_times_summary">View cross campus shuttle schedule</string>

    <!-- Toolbar -->
    <string name="cached_data">Cached data</string>
    <string name="tap_to_refresh">Tap to refresh</string>

    <!-- TimeTableDay -->
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>

    <!-- ExtendSessionActivity -->
    <string name="extend">Extend</string>

    <!-- ContactsActivity -->
    <string name="safety">Safety</string>
    <string name="emond_safra">Edmon J. Safra</string>
    <string name="mount_scopus">Mount Scopus</string>
    <string name="ein_karem">Ein Kerem</string>
    <string name="rehovot">Rehovot</string>
    <string name="campus_Security">Campus Security</string>
    <string name="prompt_email">Email</string>
    <string name="humanities_Faculty">Humanities Faculty</string>
    <string name="social_Science_Faculty">Social Science Faculty</string>
    <string name="math_science_faculty">Mathematics and Science Faculty</string>
    <string name="school_of_ba">School of Business Administration</string>
    <string name="school_of_social_work">School of Social Work</string>
    <string name="law_faculty">Law Faculty</string>
    <string name="medicine_Faculty">Medicine Faculty</string>
    <string name="dental_med_faculty">Dental Medicine Faculty</string>
    <string name="faculty_of_agri">Faculty of Agricultural, Food and Environment</string>
    <string name="education_school">Education School</string>
    <string name="pre_academic_studies">Pre-Academic Studies</string>
    <string name="student_matters">Student Matters</string>
    <string name="app_with_bagrut">Applicants with Israeli \'Bagrut\'</string>
    <string name="foreign_app">Foreign Applicants</string>
    <string name="huji_spokesman">HUJI Spokesman</string>
    <string name="web_master">Webmaster</string>

    <!-- CampusShuttleTimesActivity -->
    <string name="from_high_Tech">From high tech village</string>
    <string name="from_main_gate">From main gate</string>
    <string name="from_bus_tunnel">From bus tunnels</string>
    <string name="from_student_village">From student village</string>

    <!-- MoreFragmentMenu -->
    <string name="logout">Logout</string>

    <!-- CoursesFramgnetsHolder -->
    <string name="grades">Grades</string>
    <string name="exams">Exams</string>
    <string name="note_book">NoteBooks</string>

    <!-- CoursesFragment -->
    <string name="shnaton">Shnaton</string>
    <string name="gpaCalc">GPA Calculator</string>
    <string name="where_to_get_course">Select year</string>
    <string name="enter_course_number">Enter course number</string>
    <string name="tip_shnaton">Tip: Tap and hold on a course to access its Shnaton</string>
    <string name="enter_year">Enter year</string>

    <!-- CourseTypeEnum -->
    <string name="mid_term">Midterm</string>
    <string name="final_exam">Final</string>
    <string name="calculated">Calculated</string>
    <string name="partial">Partial</string>
    <string name="part">Part %1$d</string>
    <string name="unknown">Unknown</string>
    <string name="expected">Expected</string>

    <!-- CourseAdapter -->
    <string name="credit_points">Credit Points: </string>
    <string name="type">Type: </string>
    <string name="syllabus">Syllabus</string>
    <string name="statistics">Statistics</string>
    <string name="extra_marks">Extra marks</string>

    <!-- ChartActivity -->
    <string name="if_passing_grade">If the passing grade is</string>
    <string name="loading_data">Loading data...</string>
    <string name="students_passed">%1$d (%2$.02f%%) students passed the course and %3$d (%4$.02f%%) students failed</string>

    <!-- GPACalculatorActivity -->
    <string name="enter_grade">Enter Grade</string>
    <string name="grade_average">Total grade average: %1$.2f</string>
    <string name="cum_grade_average">Cumulative total GPA: %1$.2f</string>

    <!-- TableFragment -->
    <string name="first_semester">First semester</string>
    <string name="second_semester">Second semester</string>
    <string name="change_color">Change Color</string>

    <!-- ExtraGradesActivity -->
    <string name="moed">Moed: </string>
    <string name="moed_a">A</string>
    <string name="moed_b">B</string>
    <string name="moed_c">C</string>

    <!-- ExamsFragment -->
    <string name="add_to_calendar">Add to calendar</string>
    <string name="room_or_special">Would you like to save with the special room?</string>
    <string name="no_exams">No exams</string>

    <!-- CalendarActivity -->
    <string name="all_day">all-day</string>
    <string name="ends">Ends</string>

    <!-- NoteBooksFragment -->
    <string name="no_notebooks">No notebooks</string>
    <string name="download">%1$.01f %2$s downloaded</string>
    <string name="date">Date: </string>

    <!-- MapFragment -->
    <string name="building">Building</string>
    <string name="computer_lab">Computer Lab</string>
    <string name="library">Library</string>
    <string name="resturant">Restaurant</string>
    <string name="sport_center">Sport Center</string>
    <string name="cafe">Café</string>
    <string name="closed">Closed</string>
    <string name="done">Done</string>

    <string name="places">Places</string>
    <string name="buildings">Buildings</string>
    <string name="computer_labs">Computer Labs</string>
    <string name="libraries">Libraries</string>
    <string name="resturants">Restaurants</string>
    <string name="cafes">Cafés</string>
    <string name="sport_centers">Sport Centers</string>

    <string name="categories">Categories</string>

    <!-- SearchPlacesActivity -->
    <string name="search">Search</string>
    <string name="meters">m</string>
    <string name="kilo_meters">km</string>
    <string name="opentwentyfour">Open 24/7</string>

    <!-- AboutMeFragment -->
    <string name="address">Address</string>
    <string name="mobile_number">Mobile number</string>
    <string name="phone_number">Phone number</string>

    <!-- ExamsDetailsActivity -->
    <string name="exam_room">Exam room : </string>
    <string name="special_exam_room">Special exam room : </string>
    <string name="view_more_rooms">View more rooms</string>
    <string name="location_not_available">Location not available</string>

    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_enabled">Dark mode enabled</string>
    <string name="dark_mode_disabled">Dark mode disabled</string>
</resources>