<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:context=".activities.MainActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/idTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/idText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login_hint"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:maxLength="9"
                android:singleLine="true"
                app:hintTextAppearance="@android:style/TextAppearance.Medium" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/huji_logo_desc"
            android:src="@drawable/huji" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/captchaText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:allowUndo="true"
            android:focusable="false"
            android:text="@string/login"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/captchaText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/captchaImage"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:hint="@string/captcha"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:inputType="number"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/captchaImage"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_below="@+id/passwordLayout"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/captcha" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/idTextLayout"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/idTextLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/personalCodeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/personal_code"
                android:imeOptions="flagNoExtractUi"
                android:inputType="numberPassword"
                android:singleLine="true"
                app:hintTextAppearance="@android:style/TextAppearance.Medium" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>
</ScrollView>